# sot-torque-control

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  .yapfignore  CMakeLists.txt  LICENSE  README.md  package.xml  pyproject.toml  setup.cfg
data/traj_com_y_0.08/: com_spline.curve  lf_force.curve  lf_spline2.curve  lf_spline3.curve  lf_spline4.curve  lf_spline5.curve  lf_spline6.curve  lh_force.curve  rf_force.curve  rh_force.curve
doc/: CMakeLists.txt  Doxyfile.extra.in  Overview.md  bellStepRun.md  ddpRun.md  installation.md  running.md  treeview.dox  walkRun.md
include/: CMakeLists.txt
include/sot/torque_control/: CMakeLists.txt  admittance-controller.hh  base-estimator.hh  commands-helper.hh  common.hh  control-manager.hh  current-controller.hh  ddp-actuator-solver.hh  ddp_pyrene_actuator_solver.hh  device-torque-ctrl.hh  filter-differentiator.hh  force-torque-estimator.hh  free-flyer-locator.hh  hrp2-device-pos-ctrl.hh  hrp2-device-torque-ctrl.hh  imu_offset_compensation.hh  inverse-dynamics-balance-controller.hh  inverse-dynamics-controller.hh  joint-torque-controller.hh  joint-trajectory-generator.hh  madgwickahrs.hh  motor-model.hh  nd-trajectory-generator.hh  numerical-difference.hh  position-controller.hh  posture-task.hh  se3-trajectory-generator.hh  signal-helper.hh  simple-inverse-dyn.hh  stc-commands.hh  torque-offset-estimator.hh  trace-player.hh  vel-acc-estimator.hh
include/sot/torque_control/utils/: Stdafx.hh  causal-filter.hh  lin-estimator.hh  logger.hh  metapod-helper.hh  poly-estimator.hh  quad-estimator.hh  stop-watch.hh  trajectory-generators.hh  vector-conversions.hh
python/: CMakeLists.txt  create_entities_utils.py  main.py  main_sim.py
python/cmd/: cmd_base_vel_est.py  cmd_current_ctrl_tuning.py  cmd_hrp2_1404_2ms.py  cmd_hrp2_balance_ctrl.py  cmd_hrp2_identification.py  cmd_mocap.py  cmd_test_admittance_ctrl.py  cmd_velocity_filters.py  cmd_vibration_source_identification.py
python/dynamic_graph/sot/torque_control/: CMakeLists.txt  create_entities_utils.py  create_entities_utils_pyrene.py  create_entities_utils_talos.py  main.py  main_pyrene.py  main_sim.py  main_sim_pyrene.py  main_sim_talos.py  main_talos.py
python/dynamic_graph/sot/torque_control/identification/: compress_identification_data.py  compress_identification_data_args.py  compute_estimates_from_sensors.py  identification_utils.py  identification_utils_pyrene.py  identification_utils_talos.py  identify_motor.py  identify_motor_acc.py  identify_motor_low_level.py  identify_motor_static.py  identify_motor_vel.py  identify_motor_with_current.py  motor_model.py
python/dynamic_graph/sot/torque_control/identification/pos_ctrl/: check_identified_motor.py  compress_adm_ctrl_data.py  compress_force_sin_data.py  compress_hrpsys_data.py  compress_identification_data_old_until_03_2015.py  compress_identification_data_old_until_12_2015.py  compress_impact_test_data.py  compress_stairs_data.py  identify_motor_dynamic.py  identify_motor_old_until_12_2015.py  load_hrpsys_log.py  my_ltisys.py
python/dynamic_graph/sot/torque_control/tests/: robot_data_test.py  robot_data_test.py.in  test_4th_order_lds.py  test_balance_ctrl_openhrp.py  test_balance_ctrl_sim.py  test_chirp.py  test_control_manager.py  test_ctrl_manager.py  test_current_ctrl.py  test_elastic_LIPM.py  test_elastic_contact.py  test_hrp2_device_pos_ctrl.py  test_magdwick.py  test_nd_traj_gen.py  test_new_sot_hrp2_device.py  test_sinusoid.py  test_sot_hrp2_device.py  test_sot_loader_light.py  test_torque_offset_estimator.py  test_torque_offset_estimator.py.in  test_trace_player.py  test_velocity_filters.py
python/dynamic_graph/sot/torque_control/utils/: estimate_velocity.py  filter_utils.py  plot_utils.py  process_trajectory_file.py  sot_utils.py  sot_utils_talos.py
python/identification/: check_identified_motor.py  load_hrpsys_log.py  (+10 more)
scripts/: connect_to_python_interpreter.sh  launch_ros.sh  parse-calib-dat-10-04.py  python_commands.txt  rqt_multiplot_i_des.xml  rqt_multiplot_tau_des.xml  run_sot.sh  run_sot3.sh  spline_trajectory_maker.py  start_dynamic_graph.sh  stop_dynamic_graph.sh
src/: CMakeLists.txt  admittance-controller-python.hh  admittance-controller.cpp  base-estimator-python.hh  base-estimator.cpp  causal-filter.cpp  common-py.cpp  common.cpp  control-manager-python-module-py.cc  control-manager-python.hh  control-manager.cpp  current-controller-python.hh  current-controller.cpp  ddp-actuator-solver.cpp  ddp_pyrene_actuator_solver.cpp  device-torque-ctrl-python.hh  device-torque-ctrl.cpp  filter-differentiator.cpp  force-torque-estimator.cpp  free-flyer-locator-python.hh  free-flyer-locator.cpp  hrp2-device-pos-ctrl.cpp  hrp2-device-torque-ctrl.cpp  imu_offset_compensation-python.hh  imu_offset_compensation.cpp  inverse-dynamics-balance-controller-python.hh  inverse-dynamics-balance-controller.cpp  inverse-dynamics-controller.cpp  joint-torque-controller-python.hh  joint-torque-controller.cpp  joint-trajectory-generator-python.hh  joint-trajectory-generator.cpp  lin-estimator.cpp  logger.cpp  madgwickahrs.cpp  motor-model.cpp  nd-trajectory-generator.cpp  numerical-difference-python.hh  numerical-difference.cpp  poly-estimator.cpp  (+16 more)
src/dynamic_graph/sot/torque_control/: __init__.py  test_sinusoid_full.py  test_sot_loader_light.py
tests/: CMakeLists.txt  conversion_utils.py  test-control-manager.cpp  test.py  test_controller_manager.cpp  test_position_controller.py  unit_test_free_flyer_locator.py  unit_test_se3_trajectory_generator.py
travis_custom/: custom_before_install  custom_build
unitTesting/: CMakeLists.txt  conversion_utils.py  test-control-manager.cpp  test.py  test_control_manager.py  test_controller_manager.cpp  test_free_flyer_locator.py  test_position_controller.py  test_se3_trajectory_generator.py  unit_test_control_manager.py  unit_test_free_flyer_locator.py  unit_test_inverse_dynamics_balance_controller.py  unit_test_inverse_dynamics_balance_controller_v3.py  unit_test_position_controller.py  unit_test_se3_trajectory_generator.py
(+26 files in other folders)
